@@ -2,7 +2,9 @@ package com.edddoubled.orunmila.devpathroute.model.user;
 
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
@@ -16,37 +18,45 @@ import static com.edddoubled.orunmila.devpathroute.model.user.Permission.*;
  */
 @RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
-    ADMIN(
-            Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    ),
-    MANAGER(
-            Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    );
+	USER(Collections.emptySet()),
+	ADMIN(
+			Set.of(
+					ADMIN_READ,
+					ADMIN_UPDATE,
+					ADMIN_DELETE,
+					ADMIN_CREATE,
+					MANAGER_READ,
+					MANAGER_UPDATE,
+					MANAGER_DELETE,
+					MANAGER_CREATE
+			)
+	),
+	MANAGER(
+			Set.of(
+					MANAGER_READ,
+					MANAGER_UPDATE,
+					MANAGER_DELETE,
+					MANAGER_CREATE
+			)
+	);
 
-    @Getter
-    private final Set<Permission> permissions;
+	@Getter
+	private final Set<Permission> permissions;
 
-    public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions()
-                .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .collect(Collectors.toList());
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-        return authorities;
-    }
+	public @NotNull List<SimpleGrantedAuthority> getAuthorities() {
+		var authorities = getPermissions()
+				.stream()
+				.map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+				.collect(Collectors.toList());
+		authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+		return authorities;
+	}
+
+	@Component("CommunityRole")
+	@Getter
+	static class CommunityRole {
+		private final Role USER = Role.USER;
+		private final Role ADMIN = Role.ADMIN;
+		private final Role MANAGER = Role.MANAGER;
+	}
 }
